--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">• A Simplex Minecraft server, 2021. Powered by <a href="#" class="icon brands fa-github"></a> •</p>
+						<p class="copyright">• A Simplex Minecraft server, 2021. Powered by <a href="https://github.com/steel034/simplex" class="icon brands fa-github"></a> •</p>
 					</footer>
 
 			</div>
