--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<h3 class="major">Три простых шага перед игрой</h3>
 								<h3>Шаг 1</h3>
-								<p align="justify">Загрузить лаунчер Minecraft. Мы рекомендуем использовать <a href = "https://tlauncher.org/installer">tLauncher</a>, <a href = "https://mlauncher.ru/downloading">mLauncher</a> или <a href = "https://cdn.xlauncher.org/xLauncher_Installer.exe">xLauncher</a>. При наличии лицензии Minecraft можно использовать <a href="https://launcher.mojang.com/download/MinecraftInstaller.msi">официальный лаунчер</a>.</p>
+								<p align="justify">Загрузить лаунчер Minecraft. Мы рекомендуем использовать <a href = "https://tlauncher-legacy.ru/exe">TLauncher</a>. При наличии лицензии Minecraft можно использовать <a href="https://launcher.mojang.com/download/MinecraftInstaller.msi">официальный лаунчер</a>.</p>
 								<h3>Шаг 2</h3>
 								<p align="justify">Выбрать версию игры <b>1.16.4</b> и дождаться её установки. Мы не гарантируем исправную работу сервера на более ранних версиях игры.</p>
 								<h3>Шаг 3</h3>
