--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Simplex — игровой сервер Minecraft (1.16.4)</title>
+		<title>Simplex — игровой сервер Minecraft (1.x.x)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,16 +26,16 @@
 						<div class="content">
 							<div class="inner">
 								<h1>&nbsp;&nbsp;&nbsp;Simplex<img src="images/test.png" style="transform: translate(-3px,-8px)"></h1>
-								<p>Мы приветствуем тебя на игровом сервере Minecraft версии <b>1.16.4</b>,<br />
+								<p>Приветствуем тебя на игровом сервере Minecraft версии <b>1.x.x</b>,<br />
 								где ты можешь окунуться в атмосферу выживания, путешествий и квестов</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#play"><b>Play</b></a></li>
-								<li><a href="#about"><b>About</b></a></li>
-								<li><a href="#rules"><b>Rules</b></a></li>
-								<li><a href="#donate"><b>Donate</b></a></li>
+								<li><a href="#play"><b>Играть</b></a></li>
+								<li><a href="#about"><b>О нас</b></a></li>
+								<li><a href="#rules"><b>Правила</b></a></li>
+								<li><a href="#donate"><b>Донат</b></a></li>
 							</ul>
 						</nav>
 					</header>
@@ -51,17 +51,17 @@
 								<h3>Шаг 1</h3>
 								<p align="justify">Загрузить лаунчер Minecraft. Мы рекомендуем использовать <a href = "https://tlauncher-legacy.ru/exe">TLauncher</a>. При наличии лицензии Minecraft можно использовать <a href="https://launcher.mojang.com/download/MinecraftInstaller.msi">официальный лаунчер</a>.</p>
 								<h3>Шаг 2</h3>
-								<p align="justify">Выбрать версию игры <b>1.16.4</b> и дождаться её установки. Мы не гарантируем исправную работу сервера на более ранних версиях игры.</p>
+								<p align="justify">Выбрать версию игры <b>1.x.x</b> и дождаться её установки. Мы не гарантируем исправную работу сервера на более ранних версиях игры.</p>
 								<h3>Шаг 3</h3>
 								<p align="justify">Подключиться к серверу, используя наш IP-адрес:
-								<code>play.simplexmc.ru</code></p>
+								<strike><code>play.simplexmc.ru</code></strike></p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">О сервере</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p align="justify">Сервер находится в активной разработке.<br />Тестовая версия продлится ориентировочно до <b>1 июля 2021 года</b>.<br />Данный раздел будет написан позднее. Благодарим за понимание.</p>
+								<p align="justify">Сервер находится в активной разработке.<br />Тестовая версия продлится ориентировочно до <b>undefined</b>.<br />Данный раздел будет написан позднее. Благодарим за понимание.</p>
 							</article>
 
 						<!-- Rules -->
@@ -69,7 +69,7 @@
 								<h2 class="major">Правила сервера</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<h3>1. Общие положения</h3>
-								<p align="justify">1.1. Заходя на игровой сервер Simplex (далее – Сервер), субъект становится его полноправным пользователем.<br />
+								<p align="justify">1.1. Заходя на игровой сервер Simplex (далее – Сервер), посетитель становится его полноправным пользователем.<br />
 1.2. Пользователь (далее – Игрок) обязуется выполнять положения настоящих Правил.<br />
 1.3. Настоящие Правила составлены Администратором и выступают в качестве главного условия игры на Сервере.<br />
 1.4. В роли Администратора – коллектив руководителей Сервера, в роли Игрока – любое физическое лицо.<br />
