--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#play"><b>Играть</b></a></li>
-								<li><a href="#about"><b>О нас</b></a></li>
-								<li><a href="#rules"><b>Правила</b></a></li>
-								<li><a href="#donate"><b>Донат</b></a></li>
+								<li><a href="#play"><b>Play</b></a></li>
+								<li><a href="#about"><b>About</b></a></li>
+								<li><a href="#rules"><b>Rules</b></a></li>
+								<li><a href="#donate"><b>Donate</b></a></li>
 							</ul>
 						</nav>
 					</header>
